testsuite/poke.pkl/arrays-initializer-diag-2.pk
/* { dg-do compile } */

fun a = int: { return 10; }
[.[2 + a] = 666]; /* { dg-error "constant" } */
